--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -637,6 +637,7 @@ button > span {
   }
   .hero {
     padding: 100px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/tablet/main_block_bgr@1x.jpg");
   }
   .hero__title {
     font-size: 26px;
@@ -644,6 +645,13 @@ button > span {
     line-height: 1.61;
     font-weight: 800;
   }
+}
+@media screen and (min-width: 768px) and (max-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/tablet/main_block_bgr@2x.jpg");
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1200px) {
   .feature {
     padding: 60px 0;
   }
@@ -829,6 +837,7 @@ button > span {
   }
   .hero {
     padding: 200px 0;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desktop/main_block_bgr@1x.jpg");
   }
   .hero__title {
     font-size: 44px;
@@ -836,6 +845,13 @@ button > span {
     line-height: 1.36;
     font-weight: 900;
   }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/desktop/main_block_bgr@2x.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
   .feature {
     padding: 94px 0;
   }
