--- a/sass/components/desktop/_desktop.hero.scss
+++ b/sass/components/desktop/_desktop.hero.scss
@@ -1,7 +1,19 @@
 .hero {
     padding: 200px 0;
+    background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+        url("../images/desktop/main_block_bgr@1x.jpg");
 
     &__title {
         @include font4(44px, 2.64px, 1.36, 900);
     }
+}
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/desktop/main_block_bgr@2x.jpg");
+  }
 }
