--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -400,8 +400,7 @@ button > span {
 }
 .portfolio__filters-list {
   display: flex;
-  -moz-column-gap: 8px;
-       column-gap: 8px;
+  gap: 8px;
   flex-wrap: wrap;
 }
 
@@ -423,7 +422,6 @@ button > span {
   }
 }
 .portfolio-list {
-  flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
   align-items: normal;
@@ -781,6 +779,7 @@ button > span {
   .portfolio-list {
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
   }
   .portfolio-list__item {
     flex-basis: calc((100% - 60px) / 2);
@@ -953,6 +952,7 @@ button > span {
     flex-wrap: unset;
   }
   .portfolio-list {
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
   }
