--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -8,7 +8,7 @@
 
     &__filters-list {
         display: flex;
-        column-gap: 8px;
+        gap: 8px;
         flex-wrap: wrap;
     }
 }
@@ -36,7 +36,7 @@
 }
 
 .portfolio-list {
-    flex-wrap: wrap;
+    
     display: flex;
     justify-content: space-between;
     align-items: normal;
