--- a/sass/components/tablet/_tablet.portfolio.scss
+++ b/sass/components/tablet/_tablet.portfolio.scss
@@ -16,6 +16,7 @@
     .portfolio-list {
         flex-direction: row;
         align-items: center;
+        flex-wrap: wrap;
         &__item {
             flex-basis: calc((100% - 60px)/2);
         }
